--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site
-title:              Massively
-bio:                'Jekyll version of the Massively theme by HTML5UP'
-description:        "Jekyll version of the Massively theme by HTML5UP"
-locale:             en_US
+title:              绿米演讲测试
+bio:                '绿米演讲'
+description:        "在绿米做演讲"
+locale:             zh_CN
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 
@@ -41,9 +41,9 @@ instagram:          default
 github:             default
 
 # personal
-location:           Los Angeles, CA
-phone:              310-318-5555
-email:              info@default.com
+location:           Shenzhen, Guangdong
+phone:              135-1066-5675
+email:              xiaofeng.qu@lumiunited.com
 
 # Gems
 gems:
